# SuanshuMajiang

./: .gitignore  ArithmeticMahjong.py  README.md  calculator.py  card.py  cards.py  empty_listening_checker.py  equation.py  fan.py  final_demo.py  hand_structure.py  hand_validator.py  interactive_example.py  mahjong_checker.py  mode34_usage_guide.py  parser.py  pyproject.toml  pyvenv.cfg  special_winning_checker.py  test.py  test_all_features.py  traditional_mahjong.py  使用说明.md  算数麻将听牌计算器.py  算数麻将番数计算器.py  算数麻将计算器.py
Scripts/: activate  activate.bat  activate.csh  activate.fish  activate.nu  activate.ps1  activate_this.py
calculator_base/: constants.py  empty_listening_checker.py  hand_structure.py  hand_validator.py  mahjong_checker.py  parser.py  special_winning_checker.py  traditional_mahjong.py
fan_calculator/: __init__.py  fan_base.py  fan_calculator.py  fan_comparison.py  fan_context.py  fan_formula_based.py  fan_number_based.py  fan_special.py  fan_special_winning.py  fan_tile_info.py
tests/: test_mahjong.py
